# bevy-tutorial

./: .editorconfig  Cargo.toml  Makefile
notes/: 1.add_system.md  10.Change_Detection.md  11.Collision.md  12.Bundle.md  2.commands.md  3.DefaultPlugins.md  4.AssetServer.md  5.ECS_bundle.md  6.SpriteComponent.md  7.Mutate_Component.md  8.Input.md  9.Events.md  ex.Fix_Default_Plugin.md  ex.Query.md  ex.Spawn_Trait.md  ex.Transform_vs_GlobalTransform.md  ex.discovery.md  ex.introducing_bevy.md  ex.system_argument.md
src/: ball.rs  ball_game.rs  goal.rs  main.rs  paddle.rs  wall.rs
