[package]
name = "bevy-tutorial"
version = "0.1.0"
authors = ["max <harumaxy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ball_game"
path = "./src/ball_game.rs"


[dependencies]
bevy = "0.4" # make sure this is the latest version
bevy_discovery = "0.1.0"
